--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 # ===============================
 # DATASOURCE (MySQL)
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_db?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
