--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,11 @@
-# ===============================
-# SERVER
-# ===============================
-server.port=8080
+spring.application.name=sql
 
-# ===============================
-# DATASOURCE (MySQL)
-# ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+server.port=9001
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dynamic_tickets?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ===============================
-# JPA / HIBERNATE
-# ===============================
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
-
-# ===============================
-# HIKARI CP
-# ===============================
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.max-lifetime=1800000
+spring.jpa.properties.hibernate.format_sql=true
