--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,22 @@ spring.application.name=sql
 
 server.port=9001
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dynamic_tickets?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=Amypo
+# Primary MySQL Configuration (for college portal)
+# spring.datasource.url=jdbc:mysql://localhost:3306/dynamic_tickets?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+# spring.datasource.username=root
+# spring.datasource.password=Amypo
+
+# Fallback H2 Configuration (for local testing)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# JWT Configuration
+jwt.secret=mySecretKey
+jwt.expiration=86400000
